css/style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    scroll-behavior: smooth;
    scroll-padding-top: 2rem;
}

:root {
    --bg-color: #0b090a;
    --footer-color: #080808;
    --main-color: rgb(186, 24, 27);
    --2nd-main-color: #d3d3d3;
    --text-color: #fff;
    --big-font: 3rem;
    --h2-font: 1.9rem;
    --h3-font: 1.4rem;
    --h4-font: 1.2rem;
    --p-font: 1rem
}

::-webkit-scrollbar {
    width: 12px;
    background-color: #0b090a;
}

::-webkit-scrollbar-corner {
    background-color: auto;
}

/* Track */
::-webkit-scrollbar-track {
    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
    border-radius: 10px;
    background-color: #0b090a;
}

/* Handle */
::-webkit-scrollbar-thumb {
    border-radius: 10px;
    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3); */
    background-color: #888;
    border: 2px auto;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
}

header {
    position: fixed;
    width: 100%;
    top: 0;
    right: 0;
    z-index: 1000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: var(--bg-color);
    padding: 24px 14%;
    transition: .3s;
}



.logo {
    color: var(--text-color);
    font-size: 1.8rem;
    font-weight: 600;

}

.logo span {
    color: var(--main-color);
}

.navbar {
    display: flex;
}

.navbar a {
    color: var(--text-color);
    font-size: 1rem;
    padding: 10px 20px;
    font-weight: 500;
}

.navbar a:hover {
    background: var(--main-color);
    transition: .3s;
}

#menu-icon {
    font-size: 28px;
    z-index: 1001;
    cursor: pointer;
    display: none;
}

section {
    padding: 24px 14%;
}

.home {
    position: relative;
    height: 100vh;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 6rem;
    align-items: center;
    justify-items: center;
}

.home-img img {
    max-width: 100%;
    width: 600px;
    height: auto;
}

.home-text h5 {
    color: var(--text-color);
    font-size: 25px;
    font-weight: 500;
    margin: 0 0 20px;
}

.home-text h1 {
    font-size: var(--big-font);
    color: var(--text-color);
    font-weight: 700;
    line-height: 1;
    margin: 0 0 20px;
}

.home-text h6 {
    color: var(--text-color);
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 25px;
}

.home-text p {
    max-width: 470px;
    font-size: var(--p-font);
    font-weight: 300;
    line-height: 2rem;
    margin-bottom: 1rem;
    color: var(--2nd-main-color);
}

.icons {
    margin-bottom: 1rem;
}

.icons img {
    width: 32px;
    padding-right: 2px;
}

.btn {
    background: var(--main-color);
    color: var(--text-color);
    box-shadow: 4px 4px var(--text-color);
    padding: 0 25px;
    line-height: 42px;
    display: inline-block;
    border: 1px solid transparent;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
    transition: ease all .3s;
}

.btn:hover {
    background: var(--text-color);
    color: var(--main-color);
    box-shadow: 4px 4px var(--main-color);
    transition: ease all .3s;
}

.about {
    display: grid;
    grid-template-columns: repeat(2, 2fr);
    grid-gap: 5rem;
    align-items: center;
}

.about-text h3 {
    color: var(--text-color);
    font-size: 30px;
    font-weight: 300;
    letter-spacing: 6px;
    margin: 0 0 30px;
}


.about-text p {
    max-width: 570px;
    font-size: var(--h3-font);
    font-weight: 300;
    margin-bottom: 1.5rem;
    line-height: 1.8rem;
    word-spacing: 6px;
    color: var(--2nd-main-color);
}

.education {
    max-width: 100%;
}


.education h3 {
    color: var(--text-color);
    font-size: 30px;
    font-weight: 300;
    letter-spacing: 6px;
    margin: 0 0 30px;
}

.education .row {
    display: flex;
    margin: 20px;
    padding: 10px;
}

.education .row .col-1 {
    flex-grow: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.education .row .col-2 {
    flex-grow: 8;
    padding-left: 10px;
}

.education .row .col-2 h2 {
    padding-bottom: 10px;
}

.education .row .col-2 span {
    color: var(--main-color);
}

.skill {
    max-width: 100%;
    max-height: 100hv;
    padding-top: 20px;
}

.skill .col-1 {
    margin: 15px 25px 35px 0px;
}

.skill .col-2 {
    margin: 15px 0px 35px 25px;
}

.skill h3,
.projects h3,
.contact h3 {
    color: var(--text-color);
    font-size: 30px;
    font-weight: 300;
    letter-spacing: 6px;
    margin: 0 0 30px;
}

.skill-details {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.skill .skill-detail {
    margin-top: 20px;
}

.skill h4 {
    font-size: var(--h4-font);
}

.skill .top {
    display: flex;
    justify-content: space-between;
    margin: 5px 0 5px 0;
}

.skill .bottom {
    margin: 15px 0px 15px 0px;
}

.skill .container {
    background-color: var(--2nd-main-color);
    width: 100%;
    height: 10px;
    border-radius: 25px;
}

.skill .skills {
    background-color: var(--main-color);
    color: white;
    height: 10px;
    padding: 1%;
    border-radius: 25px;
}

.skill .react {
    width: 85%;
    animation: react 3s;
}

@keyframes react{
    0% {
        width: 0%;
    }
    100% {
        width: 85%;
    }
}

.skill .javascript {
    width: 70%;
    animation: javascript 3s;
}

@keyframes javascript{
    0% {
        width: 0%;
    }
    100% {
        width: 70%;
    }
}

.skill .html {
    width: 95%;
    animation: html 3s;
}

@keyframes html{
    0% {
        width: 0%;
    }
    100% {
        width: 95%;
    }
}

.skill .css {
    width: 75%;
    animation: css 3s;
}

@keyframes css{
    0% {
        width: 0%;
    }
    100% {
        width: 75%;
    }
}

.skill .mongodb {
    width: 70%;
    animation: mongodb 3s;
}

@keyframes mongodb{
    0% {
        width: 0%;
    }
    100% {
        width: 70%;
    }
}
/* ... */

